# transit-kindle

./: .gitignore  Cargo.toml  README.md  refresh-image.sh  stops-example.yml  transit-kindle.service  update
.gitea/workflows/: build.yaml
src/: agencies.rs  api_client.rs  config.rs  handler.rs  html.rs  layout.rs  main.rs  png.rs  render.rs  server.rs
templates/: agency.html  departure.html  row.html  stops.html
